public/css/eventbot.css
body {
	background-color: #000000;
}

h1 {
	font-family: 'Amatic SC', cursive;
	color: white;
	font-size:40px;
	font-weight: 800;
	text-transform: uppercase;
	width: 100%;
	margin-bottom: 5px;
	margin-left: 1.66%;
	float:left;	
}

h3	{
	font-size: 1.5em;
	font-family: 'Saira Semi Condensed', sans-serif;
	color: white;

}

img{
	float:left;

}

.containergallery {
	margin: .5%;
	padding: 1%;
}

.img-thumbnail {
	margin-bottom: 5px;
	max-height: 401px;
}

/* amatic-sc-700 - latin */
@font-face {
  font-family: 'Amatic SC';
  font-style: normal;
  font-weight: 700;
  src: local('Amatic SC Bold'), local('AmaticSC-Bold'),
       url('../fonts/amatic-sc-v10-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/amatic-sc-v10-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* saira-semi-condensed-regular - latin */
@font-face {
  font-family: 'Saira Semi Condensed';
  font-style: normal;
  font-weight: 400;
  src: local('Saira SemiCondensed Regular'), local('SairaSemiCondensed-Regular'),
       url('../fonts/saira-semi-condensed-v3-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/saira-semi-condensed-v3-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

